--- a/data_wrangling_II.Rmd
+++ b/data_wrangling_II.Rmd
@@ -104,3 +104,34 @@ reviews = tibble(
 )
 ```
 
+## APIs
+
+```{r}
+water_df = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.csv") %>% 
+  content("parsed")
+```
+
+Pretty much ignore json API type for this class
+
+```{r}
+brfss_smart2010 = 
+  GET("https://chronicdata.cdc.gov/resource/acme-vg9e.csv",
+      query = list("$limit" = 5000)) %>% 
+  content("parsed")
+```
+
+Dataset is really big, so telling it only up to 5000 rows
+
+## Pokemon
+
+```{r}
+poke = 
+  GET("http://pokeapi.co/api/v2/pokemon/1") %>%
+  content()
+
+names(poke)
+
+poke[["stats"]]
+```
+
